--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -21,4 +21,11 @@ jobs:
         run: pip install interrogate[png]
 
       - name: Run interrogate and generate badge
-        run: interrogate --generate-badge interrogate-badge.png --badge-format png --fail-under=1
+        run: interrogate --generate-badge badge.svg --badge-format svg --fail-under=1
+      - name: Commit and Push Badge
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@github.com"
+          git add badge.svg
+          git commit -m "Update docstring coverage badge" || echo "No changes to commit"
+          git push
