--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -28,4 +28,8 @@ jobs:
           git config --global user.email "github-actions@github.com"
           git add badge.svg
           git commit -m "Update docstring coverage badge" || echo "No changes to commit"
-          git push
+      - name: Push changes
+        if: success()
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.ACCESS_TOKEN }}
